recursion.lessons.recursion.koch.Koch.scala.error
Koch:24: error: reassignment to val
    if ( levels = 0 ) { avance(200:Double); }
                ^